--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,17 +1,19 @@
 main {
-    min-height: 90vh;
+    min-height: 85vh;
 }
 
 .rating span {
     margin: 0.1rem; 
 }
 h1 {
-    font-size: 1.8rem;
-    padding: 1rem 0;
+    font-size: 1.5rem;
+    padding: 1rem;
+    font-weight: 5em;
+    color: rgb(19, 25, 216)
 }
 h2 {
-    font-size: 1.4rem;
-    padding: 0.5rem ;
+    font-size: 1rem;
+    padding-bottom: 1.5rem ;
 }
 h3 {
     padding: 1rem 0; 
@@ -24,8 +26,9 @@ h3 {
   display: flex;
 }
 .carousel-caption {
-  position: absolute;
-  top: 0;
+  position:absolute; 
+  bottom: 150;
+
 }
 
 .carousel-caption h2 {
@@ -33,10 +36,10 @@ h3 {
 }
 
 .carousel img {
-  height: 300px;
-  padding: 30px;
-  margin: 40px;
-  border-radius: 50%;
+  height: 280px;
+  padding: 20px;
+  margin: 20px;
+  border-radius: 10%;
   margin-left: auto;
   margin-right: auto;
 }
