--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,7 @@ h1 {
     color: rgb(19, 25, 216)
 }
 h2 {
-    font-size: 1rem;
+    font-size: 1.3rem;
     padding-bottom: 1.5rem ;
 }
 h3 {
@@ -27,18 +27,17 @@ h3 {
 }
 .carousel-caption {
   position:absolute; 
-  bottom: 150;
-
+  top: 0;
 }
 
 .carousel-caption h2 {
-  color: #fff;
+  color:rgba(199, 7, 7, 0.783)
 }
 
 .carousel img {
   height: 280px;
   padding: 20px;
-  margin: 20px;
+  margin: 30px;
   border-radius: 10%;
   margin-left: auto;
   margin-right: auto;
